@@ -41,6 +41,8 @@
     (tripple clicking marks all units of this type on the map?)
   -"subclassing" like in WC3: A key that cycles though different unit types in
    the currently selected group.
+  - S key stops tanks
+
   -...
  * Display targets of marked players with lines (ie. a green line if the panzer
    is moving, a red line if it is attacking some point)
