@@ -55,6 +55,7 @@ GameConfig::GameConfig(const std::string& newconfigfile)
       windspeed("windspeed", 30),
       map("map", "Bad Neuburg"),
       mapcycle("mapcycle", "Cramped, Tight Quarters, Two Villages"),
+      masterserver("masterserver", ""),
       
       screenresolution("resolution", 0, 0, 2),
       fullscreen("fullscreen", true),
@@ -127,6 +128,7 @@ GameConfig::GameConfig(const std::string& newconfigfile)
     serversettings.push_back(&windspeed);
     //serversettings.push_back(&map);
     serversettings.push_back(&mapcycle);
+    serversettings.push_back(&masterserver);
    
     visualssettings.push_back(&screenresolution);
     visualssettings.push_back(&fullscreen);
