@@ -1,3 +1,6 @@
+18-Mar-2004 by Matthias Braun
+-integrated masterserver support into the dedicated server
+
 11-Mar-2004 by Matthias Braun
 -started work on a serverconsole
 
